--- a/packages/mixin-jsbridge-demo/src/App.less
+++ b/packages/mixin-jsbridge-demo/src/App.less
@@ -1,46 +1,39 @@
-.main {
+.wrapper {
   position: relative;
   height: 100vh;
-  padding-top: 10vh;
-  color: white;
+  color: rgba(0, 0, 0, .87);
   font-weight: 600;
   font-size: 16px;
   font-family: sans-serif;
   text-align: center;
-  background-color: rgba(170, 30, 38, 1);
+  background-color: #f5f5f5;
 }
 
-.main-btn {
-  position: absolute;
-  left: 50%;
-  width: 200px;
-  height: 50px;
-  font-size: 20px;
-  line-height: 50px;
-  background: #000;
-  border-radius: 10px;
-  transform: translate(-50%, 0);
+.header {
+  padding: 10px;
+  text-align: left;
+
+  &-avatar {
+    margin-right: 10px;
+  }
+
+  &-avatar,
+  &-username {
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
 
-.main-btn-home {
-  top: 40%;
+.main {
+  &-operation {
+    margin-top: 20px;
+  }
 }
 
-.main-btn-detail {
-  top: 50%;
-}
-
-.main-btn-detail-1 {
-  top: 60%;
-}
-
-.main-btn-detail-2 {
-  top: 70%;
-}
-
-.main-footer {
+.footer {
   position: absolute;
   bottom: 2vh;
   left: 50%;
+  width: 100vw;
   transform: translate(-50%, 0);
 }
