--- a/packages/mixin-jsbridge-demo/src/pages/home/style/home.less
+++ b/packages/mixin-jsbridge-demo/src/pages/home/style/home.less
@@ -1,4 +1,11 @@
 .home {
-  display: block;
-  font-size: 45px;
+  &-title {
+    font-size: 20px;
+  }
+
+  &-description {
+    margin: 10px 0;
+    font-weight: 300;
+    font-size: 14px;
+  }
 }
