[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.0-4

--- a/packages/mixin-jsbridge-demo/src/App.less
+++ b/packages/mixin-jsbridge-demo/src/App.less
@@ -26,7 +26,10 @@
 
 .main {
   &-operation {
-    margin-top: 20px;
+    margin-top: 80px;
+    &-textarea {
+      margin: 30px auto;
+    }
   }
 }
 
