--- a/packages/mixin-jsbridge-demo/src/App.less
+++ b/packages/mixin-jsbridge-demo/src/App.less
@@ -26,7 +26,7 @@
 
 .main {
   &-operation {
-    margin-top: 50px;
+    margin-top: 30px;
     &-textarea {
       margin: 30px auto;
     }
@@ -35,8 +35,9 @@
 
 .footer {
   position: absolute;
-  bottom: 2vh;
+  bottom: 0;
   left: 50%;
   width: 100vw;
+  line-height: 60px;
   transform: translate(-50%, 0);
 }
