--- a/packages/mixin-jsbridge-demo/src/App.less
+++ b/packages/mixin-jsbridge-demo/src/App.less
@@ -22,6 +22,12 @@
     display: inline-block;
     vertical-align: middle;
   }
+
+  &-version {
+    float: right;
+    margin-top: 10px;
+    font-weight: normal;
+  }
 }
 
 .main {
