[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.4

--- a/packages/robot/src/App.less
+++ b/packages/robot/src/App.less
@@ -23,12 +23,15 @@
     vertical-align: middle;
   }
 
-  &-version {
+  &-right {
     float: right;
-    margin-top: 10px;
     font-weight: normal;
     font-size: 14px;
     color: grey;
+    .right__version,
+    .right__mixin {
+      display: block;
+    }
   }
 }
 
