[MIXIN-JSBRIDGE-BOT]: 0.1.9

--- a/packages/bot/src/App.less
+++ b/packages/bot/src/App.less
@@ -28,6 +28,7 @@
     color: grey;
     font-weight: normal;
     font-size: 14px;
+
     .right__version,
     .right__mixin {
       display: block;
@@ -38,8 +39,19 @@
 .main {
   &-operation {
     margin-top: 30px;
+
     &-textarea {
       margin: 30px auto;
+    }
+
+    &-btn {
+      display: block;
+      min-width: 36vw;
+      margin: 0 auto;
+
+      &-schema {
+        margin-top: 16px;
+      }
     }
   }
 }
