--- a/packages/bot/src/App.less
+++ b/packages/bot/src/App.less
@@ -50,7 +50,7 @@
       margin: 0 auto;
 
       &-schema {
-        margin-top: 16px;
+        margin: 16px auto 0 !important;
       }
     }
   }
